k8s/03-messaging/middleware-ws.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: ws-headers
  namespace: messaging
spec:
  headers:
    customRequestHeaders:
      Connection: "Upgrade"
      Upgrade: "websocket"
      X-Forwarded-Proto: "https"
