k8s/03-messaging/nats.yaml
apiVersion: v1
kind: Service
metadata:
  name: nats-headless
  namespace: messaging
  labels:
    app: nats
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 422
    - name: monitoring
      port: 8222
      targetPort: 822
    - name: websocket
      port: 9222
      targetPort: 9222
    - name: cluster
      port: 6222
      targetPort: 6222
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: messaging
  labels:
    app: nats
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      protocol: TCP
    - name: websocket
      port: 9222
      protocol: TCP
    - name: monitoring
      port: 8222
      protocol: TCP
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nats
  namespace: messaging
  labels:
    app: nats
spec:
  serviceName: nats-headless
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      terminationGracePeriodSeconds: 60
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1000
      #   runAsGroup: 1000
      #   fsGroup: 1000
      volumes:
        - name: nats-config-template
          configMap:
            name: nats-config
        - name: processed-config-dir
          emptyDir: { }
      containers:
        - name: nats
          image: nats:2.10.17-alpine
          imagePullPolicy: IfNotPresent
          args:
            - "--config=/etc/nats-processed/nats.conf"
          ports:
            - name: client
              containerPort: 4222
            - name: cluster
              containerPort: 6222
            - name: monitoring
              containerPort: 8222
            - name: websocket
              containerPort: 9222
          volumeMounts:
            - name: processed-config-dir
              mountPath: /etc/nats-processed
              readOnly: true
            - name: data
              mountPath: /data/jetstream
          livenessProbe:
            httpGet:
              path: /
              port: monitoring
            initialDelaySeconds: 15
            timeoutSeconds: 5
            periodSeconds: 15
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: monitoring
            initialDelaySeconds: 5
            timeoutSeconds: 5
            periodSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "500m"
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: local-path
        resources:
          requests:
            storage: 10Gi
